--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
   <script src="index.js"></script>
 </head>
 <body>
-    <nav role="navigation">Nav</nav>
+    <nav class="navigation" role="navigation">
+        <a href="">Bio</a>
+        <a href="">Projects</a>
+        <a href="">Contact</a>
+    </nav>
     <main role="main">
         <header role="banner">
             <h1>Hero</h1>
